# platanus

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark_result.txt  config.cmake.in  index.html  mkdocs.yml  search.html  sitemap.xml  zensical.toml
.github/scripts/: install_llvm.sh  setup.sh
.github/workflows/: deploy.yml  pre_commit.yml  test.yml
about/: index.html
benchmark/: CMakeLists.txt  bench_result_with_absl.json  btree_bench.cc  btree_bench.cpp  compare_benchmark_stats.py  compare_benchmarks.py  stl_bench.cc  stl_test_flags.cc
cppbtree/: btree.h  btree_comparer.h  btree_container.h  btree_iterator.h  btree_map.h  btree_node.h  btree_param.h  btree_set.h  btree_util.h  safe_btree.h  safe_btree_map.h  safe_btree_set.h
docs/: benchmark.md  index.md
docs/benchmark-assets/: bench_result_with_absl.html
docs/reference/: btree_map.md  btree_multimap.md  btree_multiset.md  btree_set.md
include/platanus/: btree_map.hpp  btree_set.hpp  constants.hpp
include/platanus/internal/: btree.hpp  btree_base_node.hpp  btree_container.hpp  btree_iterator.hpp  btree_node.hpp  btree_node_fwd.hpp  btree_param.hpp  btree_util.hpp
include/platanus/pmr/: polymorphic_allocator.hpp
platanus/: btree.h  btree_container.h  btree_iterator.h  btree_map.h  btree_map.hpp  btree_node.h  btree_node_common.h  btree_param.h  btree_set.h  btree_set.hpp  btree_util.h  polymorphic_allocator.h  safe_btree.h  safe_btree_map.h  safe_btree_set.h
platanus/commons/: btree.h  btree_container.h  btree_iterator.h  btree_node_common.h  btree_node_decl.h  btree_param.h  btree_util.h
platanus/details/: btree_node.h
platanus/experimental/: owner.hpp  unique_atomic_ptr.h
platanus/experimental/pmr/: btree_node.h  btree_node.hpp
platanus/internal/: borrow.hpp  btree.h  btree.hpp  btree_base_node.h  btree_base_node.hpp  btree_container.h  btree_container.hpp  btree_iterator.h  btree_iterator.hpp  btree_node.h  btree_node.hpp  btree_node_fwd.h  btree_node_fwd.hpp  btree_param.h  btree_param.hpp  btree_util.hpp  unique_atomic_ptr.h
platanus/pmr/: btree_node.h  polymorphic_allocator.h  polymorphic_allocator.hpp
platanus/pmr/details/: btree_node.h  polymorphic_allocator.h
reference/btree_map/: index.html
reference/btree_multimap/: index.html
reference/btree_multiset/: index.html
reference/btree_set/: index.html
search/: search_index.json
test/: CMakeLists.txt  btree_node_test.cc  btree_pmr_test.cc  btree_pmr_test.cpp  btree_test.cc  btree_test.cpp  btree_test.h  btree_test.hpp  btree_test_flags.cc  btree_test_flags.h  safe_btree_test.cc  util.cc  util.h
util/: CMakeLists.txt  util.hpp
